<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_background_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btRunBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_background_toolbar"
            android:src="@drawable/ic_back_24" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/ivImageSpace"
        android:layout_width="@dimen/width_image"
        android:layout_height="@dimen/height_image"
        android:layout_marginTop="@dimen/margin_top_image"
        android:src="@drawable/spacex_dragon_crs20_patch01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tvTittle"
        style="@style/TittleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_tittle"
        android:text="@string/text_tittle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivImageSpace" />


    <TextView
        android:id="@+id/tvDate"
        style="@style/DateStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_date"
        android:text="@string/launch_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTittle" />

    <TextView
        android:id="@+id/tvStatus"
        style="@style/StatusStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_status"
        android:text="@string/label_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDate" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStatus">


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_details" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_rocket" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_launchpad" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/width_card"
        android:layout_height="@dimen/height_card"
        android:layout_marginTop="@dimen/margin_top_card"
        app:cardCornerRadius="@dimen/corner_card"
        app:cardElevation="@dimen/elevation_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout">

        <TextView
            android:id="@+id/tvTextCard"
            style="@style/TextCardStyle"
            android:layout_width="@dimen/width_text_card"
            android:layout_height="@dimen/height_text_card"
            android:layout_marginStart="@dimen/start_text_card"
            android:layout_marginTop="@dimen/top_text_card"
            android:layout_marginEnd="@dimen/end_text_card"
            android:text="@string/text_cardView" />

        <TextView
            android:id="@+id/tvViewMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="@dimen/start_view_more"
            android:layout_marginBottom="@dimen/bottom_view_more"
            android:text="@string/view_more"
            android:textColor="@color/color_background_toolbar"
            android:textSize="@dimen/size_view_more"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>